<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button33"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/oneone"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button34"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button"
            android:text="@string/onetwo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button35"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/onethree"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button36"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/onefour"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button37"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/twoone"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/button38"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button"
            android:text="@string/twotwo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button39"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/twothree"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/button40"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/twofour"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button41"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button"
            android:text="@string/threeone"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button42"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button"
            android:text="@string/threetwo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button43"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/threethree"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/button44"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/threefour"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button45"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/fourone"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button46"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="88dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button"
            android:text="@string/fourtwo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button47"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/fourthree"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button48"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button"
            android:text="@string/fourfour"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
